src/objects/WebService_Log__c.object
<CustomObject>
    <description>used to store response codes including success and error</description>
    <fields>
        <fullName>Apex_Class__c</fullName>
        <label>Apex Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalloutStartTime__c</fullName>
        <label>Callout Start Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CalloutTime__c</fullName>
        <formula>Callout_End_Time__c -  CalloutStartTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CalloutTime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Callout_End_Time__c</fullName>
        <label>Callout End Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Name__c</fullName>
        <label>Entity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    
    
    <fields>
        <fullName>IFW_IntegrationConfig__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IFW_IntegrationConfig</label>
        <referenceTo>IFW_IntegrationConfig__c</referenceTo>
        <relationshipLabel>WebService Logs</relationshipLabel>
        <relationshipName>WebService_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WebService_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    
    <fields>
        <fullName>Log_Type__c</fullName>
        <label>Log Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Id__c</fullName>
        <formula>$Organization.Id</formula>
        <label>Org Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Body__c</fullName>
        <label>Request Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Body__c</fullName>
        <label>Response Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Code__c</fullName>
        <label>Response Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Description__c</fullName>
        <description>used to store response descriptions for end user reference</description>
        <label>Response Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>WebService Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Response_Code__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>WebService Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WebService Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>